// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar handles a capitalized name correctly 1`] = `
<div
  className="searchbar-container flex-center"
  style={
    {
      "maxWidth": "787px",
    }
  }
>
  <div
    className="flex flex-column flex-center text-medium white"
    style={
      {
        "gap": "5px",
      }
    }
  >
    Find a name
     
    <span
      aria-label="arrow-down"
      className="anticon anticon-arrow-down"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="arrow-down"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M862 465.3h-81c-4.6 0-9 2-12.1 5.5L550 723.1V160c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v563.1L255.1 470.8c-3-3.5-7.4-5.5-12.1-5.5h-81c-6.8 0-10.5 8.1-6 13.2L487.9 861a31.96 31.96 0 0048.3 0L868 478.5c4.5-5.2.8-13.2-6-13.2z"
        />
      </svg>
    </span>
  </div>
  <div
    className="searchbar"
    style={
      {
        "marginBottom": "30px",
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <div
      className=""
      id="validation-input"
      onClick={[Function]}
      style={
        {
          "height": undefined,
          "width": "100%",
        }
      }
    >
      <div
        className="flex"
        style={
          {
            "position": "relative",
            "width": "100%",
          }
        }
      >
        <input
          className="searchbar-input"
          data-testid="searchbar-input-id"
          disabled={false}
          enterKeyHint="search"
          id="searchbar-input-id"
          onChange={[Function]}
          onKeyDown={[Function]}
          pattern="^[a-zA-Z0-9-]{0,32}$"
          placeholder="Find a name"
          spellCheck={false}
          style={
            {
              "height": undefined,
            }
          }
          type="search"
          value="ARDRIVE"
        />
        <div
          onFocus={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          style={
            {
              "position": "absolute",
              "right": "10px",
              "top": "25%",
            }
          }
        >
          <span
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          />
        </div>
      </div>
      <div
        className="flex flex-column"
        style={
          {
            "color": "var(--text-white)",
            "display": "flex",
            "flexDirection": "row",
            "fontSize": "12px",
            "gap": 15,
            "justifyContent": "space-between",
            "marginTop": "15px",
            "zIndex": "1001",
          }
        }
      />
    </div>
    <button
      className="button pointer"
      data-testid="search-button"
      onClick={[Function]}
      style={
        {
          "borderLeft": "1px solid #38393B",
          "height": "undefinedpx",
          "width": "undefinedpx",
        }
      }
    >
      <div
        fill="white"
        height={18}
        width={18}
      />
    </button>
  </div>
  <div
    className="flex flex-column"
    style={
      {
        "marginTop": 30,
      }
    }
  />
</div>
`;

exports[`SearchBar handles a lowercase name correctly 1`] = `
<div
  className="searchbar-container flex-center"
  style={
    {
      "maxWidth": "787px",
    }
  }
>
  <div
    className="flex flex-column flex-center text-medium white"
    style={
      {
        "gap": "5px",
      }
    }
  >
    Find a name
     
    <span
      aria-label="arrow-down"
      className="anticon anticon-arrow-down"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="arrow-down"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M862 465.3h-81c-4.6 0-9 2-12.1 5.5L550 723.1V160c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v563.1L255.1 470.8c-3-3.5-7.4-5.5-12.1-5.5h-81c-6.8 0-10.5 8.1-6 13.2L487.9 861a31.96 31.96 0 0048.3 0L868 478.5c4.5-5.2.8-13.2-6-13.2z"
        />
      </svg>
    </span>
  </div>
  <div
    className="searchbar"
    style={
      {
        "marginBottom": "30px",
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <div
      className=""
      id="validation-input"
      onClick={[Function]}
      style={
        {
          "height": undefined,
          "width": "100%",
        }
      }
    >
      <div
        className="flex"
        style={
          {
            "position": "relative",
            "width": "100%",
          }
        }
      >
        <input
          className="searchbar-input"
          data-testid="searchbar-input-id"
          disabled={false}
          enterKeyHint="search"
          id="searchbar-input-id"
          onChange={[Function]}
          onKeyDown={[Function]}
          pattern="^[a-zA-Z0-9-]{0,32}$"
          placeholder="Find a name"
          spellCheck={false}
          style={
            {
              "height": undefined,
            }
          }
          type="search"
          value="ardrive"
        />
        <div
          onFocus={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          style={
            {
              "position": "absolute",
              "right": "10px",
              "top": "25%",
            }
          }
        >
          <span
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          />
        </div>
      </div>
      <div
        className="flex flex-column"
        style={
          {
            "color": "var(--text-white)",
            "display": "flex",
            "flexDirection": "row",
            "fontSize": "12px",
            "gap": 15,
            "justifyContent": "space-between",
            "marginTop": "15px",
            "zIndex": "1001",
          }
        }
      />
    </div>
    <button
      className="button pointer"
      data-testid="search-button"
      onClick={[Function]}
      style={
        {
          "borderLeft": "1px solid #38393B",
          "height": "undefinedpx",
          "width": "undefinedpx",
        }
      }
    >
      <div
        fill="white"
        height={18}
        width={18}
      />
    </button>
  </div>
  <div
    className="flex flex-column"
    style={
      {
        "marginTop": 30,
      }
    }
  />
</div>
`;
